perceptiview/templates/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: perceptiview
  namespace: kube-system
spec:
  type: ExternalName
  externalName: perceptiview.default.svc.cluster.local
